--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -20,33 +20,26 @@ import { Icon } from "astro-icon/components";
   <div>
     <h1
       class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
-      Marketing website done with Astro
+      Tu éxito es nuestra MISIÓN
     </h1>
-    <p class="text-lg mt-4 text-slate-600 max-w-xl">
-      Astroship is a starter template for startups, marketing websites & landing
-      pages.<wbr /> Built with Astro.build and TailwindCSS. You can quickly
-      create any website with this starter.
+    <p class="text-lg mt-4 text-slate-600 max-w-xl dark:text-gray-300">
+      AAPLUS es un centro de apoyo académico innovador y comprometido con el
+      éxito educativo de nuestros estudiantes. Fundada con la visión de ofrecer
+      servicios de alta calidad y adaptados a las necesidades actuales del
+      mercado, AAPLUS se ha convertido en un referente para aquellos que buscan
+      avanzar en su formación técnica y académica. Contamos con un equipo de
+      profesionales experimentados que están dedicados a proporcionar una
+      educación personalizada y eficaz.
     </p>
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <Link
         href="#"
         href="https://web3templates.com/templates/astroship-starter-website-template-for-astro"
         target="_blank"
-        class="flex gap-1 items-center justify-center"
+        class="flex gap-1 items-center justify-center text-white bg-green-700 hover:bg-green-800"
         rel="noopener">
-        <Icon class="text-white w-5 h-5" name="bx:bxs-cloud-download" />
-
-         Download for Free
-      </Link>
-      <Link
-        size="lg"
-        style="outline"
-        rel="noopener"
-        href="https://github.com/surjithctly/astroship"
-        class="flex gap-1 items-center justify-center"
-        target="_blank">
-        <Icon class="text-black w-4 h-4" name="bx:bxl-github" />
-         GitHub Repo
+        <Icon name="whatsapp" />
+        Contáctanos
       </Link>
     </div>
   </div>
