--- a/src/components/contactform.astro
+++ b/src/components/contactform.astro
@@ -8,37 +8,36 @@ import Button from "./ui/button.astro";
   action="https://api.web3forms.com/submit"
   method="POST"
   id="form"
-  class="needs-validation"
-  novalidate>
+  class="needs-validation">
   <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE" />
   <!-- Create your free access key from https://web3forms.com/ -->
   <input type="checkbox" class="hidden" style="display:none" name="botcheck" />
   <div class="mb-5">
     <input
       type="text"
-      placeholder="Full Name"
+      placeholder="Nombre completo"
       required
       class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
       name="name"
     />
     <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
-      Please provide your full name.
+      Por favor escribe tu nombre completo
     </div>
   </div>
   <div class="mb-5">
-    <label for="email_address" class="sr-only">Email Address</label><input
+    <label for="email_address" class="sr-only">Correo electónico</label><input
       id="email_address"
       type="email"
-      placeholder="Email Address"
+      placeholder="Correo electónico"
       name="email"
       required
       class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
     />
     <div class="empty-feedback text-red-400 text-sm mt-1">
-      Please provide your email address.
+      Por favor escribe tu correo electónico.
     </div>
     <div class="invalid-feedback text-red-400 text-sm mt-1">
-      Please provide a valid email address.
+      Correo electónico inválido.
     </div>
   </div>
   <div class="mb-3">
@@ -49,10 +48,11 @@ import Button from "./ui/button.astro";
       class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none h-36 focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
     ></textarea>
     <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
-      Please enter your message.
+      Por favor esccribe tu mensaje.
     </div>
   </div>
-  <Button type="submit" size="lg" block>Send Message</Button>
+  <div class="h-captcha" data-captcha="true"></div>
+  <Button type="submit" size="lg" block>Enviar mensaje</Button>
   <div id="result" class="mt-3 text-center"></div>
 </form>
 
@@ -76,6 +76,8 @@ import Button from "./ui/button.astro";
   }
 </style>
 
+<script is:inline src="https://web3forms.com/client/script.js" async defer
+></script>
 <script is:inline>
   const form = document.getElementById("form");
   const result = document.getElementById("result");
