--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -5,13 +5,14 @@ import Link from "./ui/link.astro";
 <div
   class="bg-black p-8 md:px-20 md:py-20 mt-20 mx-auto max-w-5xl rounded-lg flex flex-col items-center text-center">
   <h2 class="text-white text-4xl md:text-6xl tracking-tight">
-    Build faster websites.
+    Educación de primera
   </h2>
   <p class="text-slate-400 mt-4 text-lg md:text-xl">
-    Pull content from anywhere and serve it fast with Astro's next-gen island
-    architecture.
+    ¿Estas listo para que tu educación sea más fácil de lo que nunca fué?
   </p>
   <div class="flex mt-5">
-    <Link href="#" style="inverted">Get Started</Link>
+    <Link href="https://wa.me/593978621123/" target="_blank" style="inverted"
+      >Comienza aquí</Link
+    >
   </div>
 </div>
