--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,15 +1,28 @@
+---
+
+---
+
 <footer class="my-20">
-  <p class="text-center text-sm text-slate-500">
-    Copyright © {new Date().getFullYear()} Astroship. All rights reserved.
+  <p class="text-center text-sm text-slate-500 dark:text-gray-400">
+    Copyright © {new Date().getFullYear()} AAplus. All rights reserved.
   </p>
   <!--
     Can we ask you a favor 🙏
     Please keep this backlink on your website if possible.
     or Purchase a commercial license from https://web3templates.com
   -->
-  <p class="text-center text-xs text-slate-500 mt-1">
-    Made by <a
-      href="https://web3templates.com"
+  <p class="text-center text-xs text-slate-500 mt-1 dark:text-gray-400">
+    Made by
+    <a
+      href="https://www.instagram.com/junior.r14/"
+      target="_blank"
+      rel="noopener"
+      class="hover:underline">
+      Junior Ruiz
+    </a>
+    and
+    <a
+      href="https://web3templates.com/"
       target="_blank"
       rel="noopener"
       class="hover:underline">
