--- a/src/components/logos.astro
+++ b/src/components/logos.astro
@@ -1,18 +1,33 @@
 ---
-// @ts-ignore
-import { Icon } from "astro-icon/components";
+import Item from "./ui/logo.astro";
+import IconShieldCheck from "./ui/shield-check.astro";
 ---
 
 <div class="mt-24">
-  <h2 class="text-center text-slate-500">Works with your technologies</h2>
-  <div class="flex gap-8 md:gap-20 items-center justify-center mt-10 flex-wrap">
-
-    <Icon class="size-8 md:size-12" name="simple-icons:react" />
-    <Icon class="size-8 md:size-12" name="simple-icons:svelte" />
-    <Icon class="size-8 md:size-12" name="simple-icons:astro" />
-    <Icon class="size-8 md:size-16" name="simple-icons:tailwindcss" />
-    <Icon class="size-8 md:size-16" name="simple-icons:alpinedotjs" />
-    <Icon class="size-8 md:size-12" name="simple-icons:vercel" />
-
-  </div>
+  <h2 class="text-center text-slate-500 dark:text-gray-200">Respaldados por</h2>
+  <ul class="flex gap-8 md:gap-20 items-center justify-center mt-10 flex-wrap">
+    <Item title="Senescyt" tooltipID="senescyt">
+      <IconShieldCheck />
+      <span slot="tooltipContent">
+        Asegura que los cursos cuentan con el respaldo de la Secretaría Nacional
+        de Educación Superior, Ciencia, Tecnología e Innovación, otorgándoles
+        validez académica.
+      </span>
+    </Item>
+    <Item title="Ministerio de Trabajo" tooltipID="minist-trabajo">
+      <IconShieldCheck />
+      <span slot="tooltipContent">
+        Garantiza que los cursos cumplen con los estándares oficiales y son
+        reconocidos en el mercado laboral.
+      </span>
+    </Item>
+    <Item title="Empresas de Prácticas" tooltipID="companies">
+      <IconShieldCheck />
+      <span slot="tooltipContent">
+        Los estudiantes tienen la oportunidad de realizar prácticas en empresas
+        de renombre, lo que les proporciona una certificación adicional que
+        valida su experiencia práctica.
+      </span>
+    </Item>
+  </ul>
 </div>
