--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,15 +3,15 @@ import { SEO } from "astro-seo";
 import Footer from "@components/footer.astro";
 import Navbar from "@components/navbar/navbar.astro";
 import "@fontsource-variable/inter/index.css";
-import '@fontsource-variable/bricolage-grotesque';
-
-
+import "@fontsource-variable/bricolage-grotesque";
 
 export interface Props {
   title: string;
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site).toString();
+
+const siteName = "AAplus";
 
 const resolvedImageWithDomain = new URL(
   "/opengraph.jpg",
@@ -21,22 +21,22 @@ const resolvedImageWithDomain = new URL(
 const { title } = Astro.props;
 
 const makeTitle = title
-  ? title + " | " + "Astroship"
-  : "Astroship - Starter Template for Astro with Tailwind CSS";
+  ? title + " | " + siteName
+  : `${siteName} - Tu éxito es nuestra misión`;
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/aaplus-logo-short.svg" />
     <meta name="generator" content={Astro.generator} />
 
     <!-- <link rel="preload" as="image" href={src} alt="Hero" /> -->
     <SEO
       title={makeTitle}
-      description="Astroship is a starter website template for Astro built with TailwindCSS."
+      description=`${siteName} Tu éxito es nuestra misión.`
       canonical={canonicalURL}
       twitter={{
         creator: "@surjithctly",
@@ -47,16 +47,16 @@ const makeTitle = title
         basic: {
           url: canonicalURL,
           type: "website",
-          title: `Astroship - Starter Template for Astro`,
+          title: `${siteName} - Starter Template for Astro`,
           image: resolvedImageWithDomain,
         },
         image: {
-          alt: "Astroship Homepage Screenshot",
+          alt: `${siteName} Homepage Screenshot`,
         },
       }}
     />
   </head>
-  <body>
+  <body class="dark:bg-gray-700 dark:text-white">
     <Navbar />
     <slot />
     <Footer />
@@ -67,5 +67,9 @@ const makeTitle = title
         content-visibility: auto;
       }
     </style>
+    <script
+      is:inline
+      src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"
+    ></script>
   </body>
 </html>
