--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -9,30 +9,36 @@ import { Icon } from "astro-icon/components";
 <Layout title="Contact">
   <Container>
     <Sectionhead>
-      <Fragment slot="title">Contact</Fragment>
-      <Fragment slot="desc">We are a here to help.</Fragment>
+      <Fragment slot="title">Contacto</Fragment>
+      <Fragment slot="desc">Estamos aquí para ayudar.</Fragment>
     </Sectionhead>
 
     <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16">
       <div>
-        <h2 class="font-medium text-2xl text-gray-800">Contact Astroship</h2>
-        <p class="text-lg leading-relaxed text-slate-500 mt-3">
-          Have something to say? We are here to help. Fill up the form or send
-          email or call phone.
+        <h2 class="font-medium text-2xl text-gray-800 dark:text-white">
+          AAplus contactos
+        </h2>
+        <p
+          class="text-lg leading-relaxed text-slate-500 mt-3 dark:text-gray-200">
+          ¿Tienes que comunicarte? Estamos aquí para ayudar. Llena el
+          formulario, envíanos un mensaje o llamanos.
         </p>
         <div class="mt-5">
-          <div class="flex items-center mt-2 space-x-2 text-gray-600">
-            <Icon class="text-gray-400 w-4 h-4" name="uil:map-marker" />
-            <span>1734 Sanfransico, CA 93063</span>
-          </div><div class="flex items-center mt-2 space-x-2 text-gray-600">
-            <Icon class="text-gray-400 w-4 h-4" name="uil:envelope" /><a
-              href="mailto:hello@astroshipstarter.com"
+          <div
+            class="flex items-center mt-2 space-x-2 text-gray-600 dark:text-gray-400">
+            <Icon
+              class="text-gray-400 w-4 h-4 dark:text-gray-400"
+              name="uil:envelope"
+            /><a href="mailto:hello@astroshipstarter.com"
               >hello@astroshipstarter.com</a
             >
-          </div><div class="flex items-center mt-2 space-x-2 text-gray-600">
-            <Icon class="text-gray-400 w-4 h-4" name="uil:phone" /><a
-              href="tel:+1 (987) 4587 899">+1 (987) 4587 899</a
-            >
+          </div>
+          <div
+            class="flex items-center mt-2 space-x-2 text-gray-600 dark:text-gray-400">
+            <Icon
+              class="text-gray-400 w-4 h-4 dark:text-gray-400"
+              name="uil:phone"
+            /><a href="tel:+593 97 8621 123">+593 97 8621 123</a>
           </div>
         </div>
       </div>
