Component names were capitalized

--- a/src/components/logos.astro
+++ b/src/components/logos.astro
@@ -1,6 +1,6 @@
 ---
-import Item from "./ui/logo.astro";
-import IconShieldCheck from "./ui/shield-check.astro";
+import Item from "./ui/Logo.astro";
+import IconShieldCheck from "./ui/ShieldCheck.astro";
 ---
 
 <div class="mt-24">
