--- a/src/components/ui/logo.astro
+++ b/src/components/ui/logo.astro
@@ -1,5 +1,5 @@
 ---
-import Tooltip from "./tooltip.astro";
+import Tooltip from "./Tooltip.astro";
 
 const { title, tooltipID, ...rest } = Astro.props;
 const prefix = "tooltip";
