--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,7 +1,7 @@
 ---
 import { Picture } from "astro:assets";
 import heroImage from "assets/hero.png";
-import Link from "@components/ui/link.astro";
+import Link from "@components/ui/Link.astro";
 import { Icon } from "astro-icon/components";
 ---
 
