--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -1,7 +1,7 @@
 ---
-import Container from "@components/container.astro";
-import Link from "@components/ui/link.astro";
-import Dropdown from "./dropdown.astro";
+import Container from "@components/Container.astro";
+import Link from "@components/ui/Link.astro";
+import Dropdown from "./Dropdown.astro";
 import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
 
 const menuitems = [
@@ -16,8 +16,8 @@ const menuitems = [
   //   ],
   // },
   {
-    title: "Precios",
-    path: "/pricing",
+    title: "Servicios",
+    path: "/services",
     children: [],
     badge: false,
   },
