--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import Container from "@components/container.astro";
-import Cta from "@components/cta.astro";
-import Features from "@components/features.astro";
-import Hero from "@components/hero.astro";
-import Logos from "@components/logos.astro";
+import Container from "@components/Container.astro";
+import Cta from "@components/Cta.astro";
+import Features from "@components/Features.astro";
+import Hero from "@components/Hero.astro";
+import Logos from "@components/Logos.astro";
 import Layout from "@layouts/Layout.astro";
 ---
 
