--- a/src/components/ui/link.astro
+++ b/src/components/ui/link.astro
@@ -24,9 +24,11 @@ const sizes = {
 
 const styles = {
   outline: "bg-white border-2 border-black hover:bg-gray-100 text-black ",
-  primary: "bg-black text-white hover:bg-gray-800  border-2 border-transparent",
-  inverted: "bg-white text-black   border-2 border-transparent",
-  muted: "bg-gray-100 hover:bg-gray-200   border-2 border-transparent",
+  primary:
+    "bg-black text-white hover:bg-white hover:text-black border-2 border-transparent hover:border-black dark:border-none",
+  inverted:
+    "bg-white text-black border-2 border-black hover:bg-black hover:text-white dark:border-transparent",
+  muted: "bg-gray-100 hover:bg-gray-200 border-2 border-transparent",
 };
 ---
 
