--- a/src/components/SearchWidget.astro
+++ b/src/components/SearchWidget.astro
@@ -1,5 +1,6 @@
 ---
 import SearchIcon from "@components/ui/icons/Search.astro";
+import SearchFunction from "../utils/SearchWidget";
 ---
 
 <form class="max-w-xl ms-auto w-full" id="searchForm">
@@ -29,17 +30,4 @@ import SearchIcon from "@components/ui/icons/Search.astro";
   </div>
 </form>
 
-<script>
-  import DOMPurify from "dompurify";
-
-  const $form = document.querySelector("form");
-  $form?.addEventListener("submit", (e) => {
-    e.preventDefault();
-    const formData = new FormData($form);
-    const searchTerm = DOMPurify.sanitize(formData.get("search")?.toString());
-    const url = new URL(window.location.href, window.location.origin);
-    if (!searchTerm || searchTerm.length === 0) return;
-    url.searchParams.set("q", searchTerm);
-    history.pushState({}, "", url);
-  });
-</script>
+<SearchFunction client:only />
