--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -56,7 +56,8 @@ const makeTitle = title
       }}
     />
   </head>
-  <body class="dark:bg-gray-700 dark:text-white">
+  <body
+    class="dark:text-white h-full bg-[radial-gradient(circle_500px_at_50%_200px,#d1ecff,transparent)] dark:bg-[radial-gradient(circle_500px_at_50%_200px,#4d7a9b,transparent)] dark:bg-gray-700">
     <Navbar />
     <slot />
     <Footer />
