--- a/src/components/sectionhead.astro
+++ b/src/components/sectionhead.astro
@@ -1,9 +1,10 @@
 ---
-const { align = "center" } = Astro.props;
+const { align = "center", colorConfig = "text-black dark:text-white" } =
+  Astro.props;
 ---
 
 <div class:list={["mt-16", align === "center" && "text-center"]}>
-  <h1 class="text-4xl lg:text-5xl font-bold lg:tracking-tight">
+  <h1 class=`text-4xl lg:text-5xl font-bold lg:tracking-tight ${colorConfig}`>
     <slot name="title">Title</slot>
   </h1>
   <p class="text-lg mt-4 text-slate-600 dark:text-gray-200">
