--- a/src/components/ui/Title.astro
+++ b/src/components/ui/Title.astro
@@ -5,7 +5,7 @@ const {
   margin = "mb-4",
   size = "xl",
   boldLevel = "extrabold",
-  colorLigth = "gray",
+  colorLigth = "black",
   colorDark = "white",
   extraClassName,
   ...extraProps
@@ -13,7 +13,7 @@ const {
 ---
 
 <Tag
-  class=`${margin} text-${size} tracking-tight font-${boldLevel} text-${colorLigth}-900 dark:text-${colorDark} ${extraClassName}`
+  class=`${margin} text-${size} tracking-tight font-${boldLevel} text-${colorLigth} dark:text-${colorDark} ${extraClassName || ''}`
   {...extraProps}>
   <slot name="before" />
   <span>{title}</span>
