--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -27,12 +27,12 @@ const menuitems = [
     children: [],
     badge: false,
   },
-  {
-    title: "Blog",
-    path: "/blog",
-    children: [],
-    badge: false,
-  },
+  // {
+  //   title: "Blog",
+  //   path: "/blog",
+  //   children: [],
+  //   badge: false,
+  // },
   {
     title: "Contacto",
     path: "/contact",
@@ -47,8 +47,8 @@ const menuitems = [
   <Astronav>
     <div class="flex w-full lg:w-auto items-center justify-between">
       <a href="/" class="text-lg">
-        <span class="font-bold text-blue-400 dark:text-white">AA</span>
-        <span class="text-white dark:text-gray-400">plus</span>
+        <span class="font-bold text-blue-400">AA</span>
+        <span class="text-white">plus</span>
       </a>
       <div class="block lg:hidden">
         <MenuIcon class="w-4 h-4 text-gray-800" />
