remove unnecessary imports

--- a/src/components/ui/CardText.astro
+++ b/src/components/ui/CardText.astro
@@ -22,7 +22,7 @@ const setShortDescription = description.length > courseLimitDescription;
     }
     {
       setShortDescription && (
-        <Tooltip tooltipID=`tooltip-course-${key}`>{description}</Tooltip>
+        <Tooltip tooltipID={`tooltip-course-${key}`}>{description}</Tooltip>
       )
     }
   </p>
