--- a/src/components/ui/CardText.astro
+++ b/src/components/ui/CardText.astro
@@ -1,6 +1,6 @@
 ---
 import Title from "./Title.astro";
-import Tooltip from "../ui/Tooltip.astro";
+import Tooltip from "@components/ui/Tooltip.astro";
 
 const { key, title, description } = Astro.props;
 const courseLimitDescription = 100;
