--- a/src/components/logos.astro
+++ b/src/components/logos.astro
@@ -1,5 +1,5 @@
 ---
-import Item from "./ui/Logo.astro";
+import Item from "./ui/logo.astro";
 import IconShieldCheck from "./ui/ShieldCheck.astro";
 ---
 
