--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -1,6 +1,6 @@
 ---
-import Container from "@components/Container.astro";
-import Sectionhead from "@components/SectionHead.astro";
+import Container from "@components/container.astro";
+import Sectionhead from "@components/sectionhead.astro";
 import Layout from "@layouts/Layout.astro";
 import CheckIcon from "@components/ui/icons/Check.astro";
 import List from "@components/ui/Lists/List.astro";
@@ -8,8 +8,8 @@ import Item from "@components/ui/Lists/Item.astro";
 import Badge from "@components/ui/Badge.astro";
 import Title from "@components/ui/Title.astro";
 import Certificate from "@components/ui/icons/Certificate.astro";
-import Link from "@components/ui/Link.astro";
-import { COURSES } from "consts/courses";
+import Link from "@components/ui/link.astro";
+import { COURSES } from "../consts/courses";
 import SearchWidget from "@components/SearchWidget.astro";
 import Card from "@components/ui/Courses/Card.astro";
 ---
