--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -1,5 +1,5 @@
 ---
-import Dropdown from "./Dropdown.astro";
+import Dropdown from "./dropdown.astro";
 import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
 
 const menuitems = [
