--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import { SEO } from "astro-seo";
-import Footer from "@components/Footer.astro";
-import Navbar from "@components/navbar/Navbar.astro";
+import Footer from "@components/footer.astro";
+import Navbar from "@components/navbar/navbar.astro";
 import "@fontsource-variable/inter/index.css";
 import "@fontsource-variable/bricolage-grotesque";
 import WhatsAppIcon from "@components/ui/icons/WhatsApp.astro";
