--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,8 @@
 ---
 import { getCollection } from "astro:content";
 import Layout from "@layouts/Layout.astro";
-import Container from "@components/Container.astro";
-import Sectionhead from "@components/SectionHead.astro";
+import Container from "@components/container.astro";
+import Sectionhead from "@components/sectionhead.astro";
 
 // Filter team entries with 'draft: false' & date before current date
 const publishedTeamMembers = await getCollection("team", ({ data }) => {
