--- a/src/components/contactform.astro
+++ b/src/components/contactform.astro
@@ -1,5 +1,6 @@
 ---
 import Button from "./ui/button.astro";
+const API_KEY = import.meta.env.PUBLIC_WEB3FROMS_API_KEY;
 ---
 
 <!-- To make this contact form work, create your free access key from https://web3forms.com/
@@ -9,9 +10,15 @@ import Button from "./ui/button.astro";
   method="POST"
   id="form"
   class="needs-validation">
-  <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE" />
+  <input type="hidden" name="access_key" value={API_KEY} />
   <!-- Create your free access key from https://web3forms.com/ -->
   <input type="checkbox" class="hidden" style="display:none" name="botcheck" />
+  <input
+    type="hidden"
+    name="subject"
+    value="Nuevo correo desde AAplus Web Page"
+  />
+  <input type="hidden" name="from_name" value="Web Page" />
   <div class="mb-5">
     <input
       type="text"
@@ -44,7 +51,7 @@ import Button from "./ui/button.astro";
     <textarea
       name="message"
       required
-      placeholder="Your Message"
+      placeholder="Tu mensaje"
       class="w-full px-4 py-3 border-2 text-black placeholder:text-gray-800 rounded-md outline-none h-36 focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
     ></textarea>
     <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
@@ -84,6 +91,15 @@ import Button from "./ui/button.astro";
 
   form.addEventListener("submit", function (e) {
     e.preventDefault();
+    const hCaptcha = form.querySelector(
+      "textarea[name=h-captcha-response]"
+    ).value;
+
+    if (!hCaptcha) {
+      e.preventDefault();
+      alert("Por favor, realiza el test de captcha");
+      return;
+    }
     form.classList.add("was-validated");
     if (!form.checkValidity()) {
       form.querySelectorAll(":invalid")[0].focus();
